@@ -236,7 +236,11 @@ unwrap_frame_arg(PyObject * args) {
     int is_instance;
     Py_ssize_t len, i;
 
-    if (!PyTuple_Check(args) || (len = PyTuple_Size(args)) < 1) {
+    if (!PyTuple_Check(args)) {
+        Py_INCREF(args);
+        return args;
+    }
+    if ((len = PyTuple_Size(args)) < 1) {
         if (len < 0)
             return NULL;
         Py_INCREF(args);
@@ -500,6 +504,8 @@ slp_find_execname(PyFrameObject *f, int *valid)
     PyObject *dic = dp ? dp->dict : NULL;
     PyObject *exec_addr = PyLong_FromVoidPtr(f->f_execute);
 
+    assert(valid != NULL);
+
     if (exec_addr == NULL) return NULL;
     exec_name = dic ? PyDict_GetItem(dic, exec_addr) : NULL;
     if (exec_name == NULL) {
@@ -508,7 +514,7 @@ slp_find_execname(PyFrameObject *f, int *valid)
         sprintf(msg, "frame exec function at %lx is not registered!",
             (unsigned long)(void *)f->f_execute);
         PyErr_SetString(PyExc_ValueError, msg);
-        valid = 0;
+        *valid = 0;
     }
     else {
         PyFrame_ExecFunc *good, *bad;
@@ -517,7 +523,7 @@ slp_find_execname(PyFrameObject *f, int *valid)
             goto err_exit;
         }
         if (f->f_execute == bad)
-            valid = 0;
+            *valid = 0;
         else if (f->f_execute != good) {
             PyErr_SetString(PyExc_SystemError,
                 "inconsistent c?frame function registration");
