@@ -9,6 +9,12 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/140
+  Fix bugs in prickelpit.c unwrap_frame_arg() and slp_find_execname().
+
+- https://github.com/stackless-dev/stackless/issues/138
+  Correctly propose Stackless calls for C-functions.
+
 - https://bitbucket.org/stackless-dev/stackless/issues/129
   C-API: Calling PyTasklet_New( NULL, ...) no longer crashes.
 
